# ds-de-se-hub

./: .gitignore  .gitmodules  README.md
00_foundations/cv/: rv_cv_generate.tex
10_programming/python/02_notebooks/basics/: misc_enumerate_range.ipynb  misc_eval.ipynb  misc_recursion_strings.ipynb  python_tips.ipynb
10_programming/python/02_notebooks/basics_self/: func_eval.ipynb
10_programming/python/02_notebooks/challenges/: Coding_challenge.docx  appdev.py  greenbox.py
10_programming/python/02_notebooks/challenges/Heirarchy_emp_q/: client_emp.xlsx  emp_mng.xlsx  qs.xlsx  rv_heir_q_int.py
10_programming/python/02_notebooks/modules/matplotlib/: Matplotlib - 1.ipynb  Matplotlib - 2.ipynb  Matplotlib - 3.ipynb  Matplotlib - 5.ipynb  matplotlib_4.ipynb  pyplot_introduction.ipynb
10_programming/python/02_notebooks/modules/numpy/: Numpy - 1.ipynb  Numpy - 2.ipynb  Numpy - 3.ipynb
10_programming/python/02_notebooks/modules/numpy/.ipynb_checkpoints/: Numpy - 1-checkpoint.ipynb  Numpy - 3-checkpoint.ipynb
10_programming/python/02_notebooks/modules/pandas/: Pandas - 1.ipynb  Pandas - 2.ipynb  Pandas - 3.ipynb  pandas-combining-data.ipynb
10_programming/python/02_notebooks/modules/regex/: regex_1.ipynb  regex_2.ipynb
10_programming/python/02_notebooks/oop/: oop_corey_1.ipynb  oop_corey_2.ipynb  oop_corey_3.ipynb
10_programming/python/02_notebooks/optimisation/: code_profiling.ipynb  efficient_count_ter.ipynb  hero_funcs.py
10_programming/python/03_scripts/: create_structure.py  utils.py
20_data_science/21_ml_classical/02_notebooks/: Dice Simulator.ipynb  EDA.ipynb  data-wrangling.ipynb  effective_ml_workflow.ipynb  lr_clf_ml_flow.ipynb  music_random.ipynb  sklearn_tips.ipynb  stress_test.ipynb
90_projects/python-utility/: pyproject.toml  utils_modelling.py  utils_viz.py
90_projects/python_ad_hoc/: 01_tradebook_executer.py  02_rag_st_frontend.py  pyproject.toml
90_projects/python_ad_hoc/data/01_sample_kite_data/: tradebook-HFK767-EQ.csv  tradebook-HFK767-MF.csv
90_projects/python_utilities/: README.md  pyproject.toml
90_projects/python_utilities/src/utilities/dw_utils/: utils.py
90_projects/python_utilities/src/utilities/viz_utils/: distribution_plots.py
90_projects/python_utilities/tests/: test_distribution_plots.py
90_projects/python_utilities/tests/dw_utils/: test_utils.py
90_projects/python_utility/: main.py
90_projects/python_utility/ml_utils/: modelling.py
90_projects/python_utility/tests/data_wrangling_utils/: test_utils.py
docs/: ONE_STOP_GUIDE.md
