[project]
name = "python-ad-hoc"
version = "0.0.0"
description = "Throw-away experiments"
requires-python = ">=3.13"    # <-- ASCII hyphen-minus here

dependencies = [
  "numpy>=2.2",
  "pandas>=2.2",
  "matplotlib>=3.10",
  "scikit-learn>=1.6",
  "jupyterlab>=4.4",
  "black>=25.1.0",
  "ipython>=9.2.0",
  "streamlit>=1.45.1",
  "pymupdf>=1.25.5",
  "markdown2>=2.5.3",
  "rich>=14.0.0",
]

